  IndexReader to enable concurrent rewriting. Please note: This is implemented in
  a backwards compatible way. A query overriding any of both rewrite methods is
  supported. To implement this backwards layer in Lucene 9.x the
  RuntimePermission "accessDeclaredMembers" is needed in applications using
  SecurityManager.  (Patrick Zhai, Ben Trent, Uwe Schindler)

New Features
---------------------

* GITHUB#12257: Create OnHeapHnswGraphSearcher to let OnHeapHnswGraph to be searched in a thread-safety manner. (Patrick Zhai)

* GITHUB#12302, GITHUB#12311: Add vectorized implementations of VectorUtil.dotProduct(),
  squareDistance(), cosine() with Java 20 jdk.incubator.vector APIs. Applications started
  with command line parameter "java --add-modules jdk.incubator.vector" on exactly Java 20
  will automatically use the new vectorized implementations if running on a supported platform
  (x86 AVX2 or later, ARM SVE or later). This is an opt-in feature and requires explicit Java
  command line flag! When enabled, Lucene logs a notice using java.util.logging. Please test
  thoroughly and report bugs/slowness to Lucene's mailing list.
  (Chris Hegarty, Robert Muir, Uwe Schindler)

Improvements
---------------------

* GITHUB#12245: Add support for Score Mode to `ToParentBlockJoinQuery` explain. (Marcus Eagan via Mikhail Khludnev)

* GITHUB#12305: Minor cleanup and improvements to DaciukMihovAutomatonBuilder. (Greg Miller)

Optimizations
---------------------

* GITHUB#12270 Don't generate stacktrace in CollectionTerminatedException. (Armin Braun)

* GITHUB#12160: Concurrent rewrite for AbstractKnnVectorQuery. (Kaival Parikh)

* GITHUB#12286 Toposort use iterator to avoid stackoverflow. (Tang Donghai)

* GITHUB#12235: Optimize HNSW diversity calculation. (Patrick Zhai)

Bug Fixes
---------------------

* GITHUB#12291: Skip blank lines from stopwords list. (Jerry Chin)

Other
---------------------
(No changes)

======================== Lucene 9.6.0 =======================
